// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain a proper content 1`] = `
<cert-card__field-val
  data="2018-06-28T19:37:53+03:00"
  type="date"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_date"
    data-lego="react"
    style={Object {}}
  >
    28 Jun 2018, 19:37
  </span>
</cert-card__field-val>
`;

exports[`should print a hyphen in case of invalid date 1`] = `
<cert-card__field-val
  data={null}
  type="date"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_date"
    data-lego="react"
    style={Object {}}
  >
    —
  </span>
</cert-card__field-val>
`;
